force-app/main/default/objects/Position_category__c/Position_category__c.object-meta.xml
<CustomObject>
    <label>Position category</label>
    <nameField>
        <label>Position category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Position categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>