force-app/main/default/objects/Position_category__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Position categories</relationshipLabel>
    <relationshipName>Position_categories</relationshipName>
    <type>Lookup</type>
</CustomField>