force-app/main/default/objects/Position_category__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Position categories</relationshipLabel>
    <relationshipName>Position_categories</relationshipName>
    <type>Lookup</type>
</CustomField>