force-app/main/default/objects/Position_category__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Position categories</relationshipLabel>
    <relationshipName>Position_categories</relationshipName>
    <type>Lookup</type>
</CustomField>